# cell-segmentation

./: .gitignore  README.md  build_docker.sh  pyproject.toml  update_infrastructure.sh
.github/workflows/: ecr-push.yml
docker/: Dockerfile
infrastructure/: main.tf  variables.tf
src/: main.py
src/cell_segmentor/: __init__.py  segmentation.py
src/cell_segmentor/models/: cellpose_model.py
src/cell_segmentor/processing/: cell_segmentation_processor.py
src/cell_segmentor/utils/: image_utils.py  s3_utils.py
src/cell_segmentor_cli/: main.py
src/processing/: cell_segmentation_processor.py
src/utils/: s3_utils.py
tests/: test_cell_segmentation.py
