[project]
name = "cell-segmentor"
version = "0.1.0"
description = "A pipeline for segmenting cells from microscopy images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.34",
    "cellpose>=3.0.11",
    "opencv-python-headless<4.3",
    "scikit-image>=0.24.0",
    "torch==2.4.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
]

[project.scripts]
cell-segmentor = "cell_segmentor_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"